--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react-scripts": "3.0.1"
   },
   "scripts": {
-    "start": "node server",
-    "server": "nodemon server"
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\" "
   },
   "eslintConfig": {
     "extends": "react-app"
